--- a/index.html
+++ b/index.html
@@ -11,19 +11,14 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Jquery-list-draggable</h1>
-      <h2 class="project-tagline"></h2>
+      <h1 class="project-name">jQuery List Draggable</h1>
+      <h2 class="project-tagline">A jQuery plugin in order to manage lists with draggable items</h2>
       <a href="https://github.com/kmarques/jquery-list-draggable" class="btn">View on GitHub</a>
       <a href="https://github.com/kmarques/jquery-list-draggable/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/kmarques/jquery-list-draggable/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="jquery-list-draggable" class="anchor" href="#jquery-list-draggable" aria-hidden="true"><span class="octicon octicon-link"></span></a>jQuery List Draggable</h1>
-
-<p>A jQuery plugin in order to manage different lists</p>
-
 <h2>
 <a id="table-of-contents" class="anchor" href="#table-of-contents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Table of Contents</h2>
 
@@ -63,7 +58,7 @@
 <h2>
 <a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h2>
 
-<p>Please find the documentation <a href="doc/DOCUMENTATION.md">here</a></p>
+<p>Please find the documentation <a href="documentation.html">here</a></p>
 
 <h2>
 <a id="contributions" class="anchor" href="#contributions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributions</h2>
